# finn-vrt-driver

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  buildDependencies.sh  iwyu.imp
benchmarks/: AsynchronousInferenceBenchmark.cpp  CMakeLists.txt  RegressionTest.cpp  SPSCQueueBenchmark.cpp  expectedPerformance.json
cmake/: AddBenchmark.cmake  AddIntegrationtest.cmake  AddUnittest.cmake  FindVRT.cmake
example_networks/bnn/: .gitignore  build.py  folding_config.json
example_networks/identity_net/: AcceleratorDatatypes.h  acceleratorconfig.json  build.py  finn-accel.vbin
example_networks/jet-structure-classification-with-host-mem/: jetConfig.json
example_networks/single-layer-linear/: AcceleratorDatatypes.h  acceleratorconfig.json  build.py  finn_sim.vbin
integrationtest/: AsyncInference.cpp  SyncInference.cpp
src/FINNCppDriver/: CMakeLists.txt  FINNDriver.cpp
src/FINNCppDriver/config/: CMakeLists.txt  exampleConfig.json
src/FINNCppDriver/core/: Accelerator.cpp  Accelerator.h  BaseDriver.hpp  CMakeLists.txt  DeviceHandler.cpp  DeviceHandler.h
src/FINNCppDriver/core/DeviceBuffer/: AsyncDeviceBuffers.hpp  DeviceBuffer.hpp  SyncDeviceBuffers.hpp
src/FINNCppDriver/utils/: CMakeLists.txt  ConfigurationStructs.h  DataPacking.hpp  DoNotOptimize.h  FPGAReset.hpp  FinnDatatypes.hpp  FinnUtils.h  Logger.cpp  Logger.h  Logger.hpp  RingBuffer.hpp  SPSCQueue.hpp
unittests/: CMakeLists.txt
unittests/core/: BaseDriverTest.cpp  CMakeLists.txt  DeviceBufferTest.cpp  DeviceHandlerTest.cpp  UnittestConfig.h
unittests/utils/: CMakeLists.txt  SPSCQueueTest.cpp
unittests/xrtMock/experimental/: xrt_ip.h
unittests/xrtMock/xrt/: xrt_bo.cpp  xrt_bo.h  xrt_kernel.cpp
